--- a/app/app.json
+++ b/app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "UpScript",
-    "slug": "UpScript",
+    "name": "MedUrgency",
+    "slug": "MedUrgency",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
